--- a/translations/eu.json
+++ b/translations/eu.json
@@ -10,7 +10,7 @@
     "offer__button": "Random move",
     "offer__description": "Here are some of my most recent projects made over the past year",
     "slide__This-portfolio": "This-portfolio",
-    "slide__link": "link",
+    "slide__link0": "link",
     "end__description": "more projects are soon",
     "About__Me": "About Me",
     "about__text": "Hey! My name is Andrey Evgenievich. I am a junior Web developer, based in Russia, Novosibirsk. I am currently actively studying React JS and Node JS libraries. I am constantly learning new design tools and Web technologies along with new trends. Outside of work or self-study, I am interested in architecture, video games and learning new things, everything that inspires.",
