--- a/translations/ru.json
+++ b/translations/ru.json
@@ -10,7 +10,7 @@
     "offer__button": "Кнопка",
     "offer__description": "Вот некоторые из моих недавних проектов, сделанных за прошедший год",
     "slide__This-portfolio": "Это портфолио",
-    "slide__link": "Ссылка",
+    "slide__link0": "Ссылка",
     "end__description": "больше проектов в разработке",
     "About__Me": "Обо мне",
     "about__text": "Привет! Меня зовут Андрей Евгеньевич. Я начинающий веб-разработчик, из России, Новосибирска. В настоящее время активно изучаю библиотеки Node JS и совершенствую свои навыки по JS. Я постоянно изучаю новые инструменты дизайна и веб-технологии наряду с новыми тенденциями. Вне работы или самообучения я интересуюсь архитектурой, видеоиграми и изучением новых вещей, всего, что вдохновляет.",
