--- a/translations/ua.json
+++ b/translations/ua.json
@@ -10,7 +10,7 @@
     "offer__button": "Кнопка",
     "offer__description": "Ось деякі з моїх недавніх проектів, зроблених за минулий рік",
     "slide__This-portfolio": "це портфоліо",
-    "slide__link": "ПОСИЛАННЯ",
+    "slide__link0": "ПОСИЛАННЯ",
     "end__description": "більше проектів у розробці",
     "About__Me": "Про мене",
     "about__text": "Привіт! Мене звати Андрій Євгенович. Я початківець веб-розробник, з Росії, Новосибірська. В даний час активно вивчаю бібліотеки Node JS і вдосконалюю свої навички по JS. Я постійно вивчаю нові інструменти дизайну та веб-технології поряд з новими тенденціями. За межами роботи або Самонавчання я цікавлюся архітектурою, відеоіграми та вивченням нових речей, всього, що надихає.",
