--- a/translations/ru.json
+++ b/translations/ru.json
@@ -2,7 +2,7 @@
     "nav__welcome": "Приветствие",
     "projects": "Проекты",
     "skills": "Навыки",
-    "who?": "Кто?",
+    "who?": "Обо мне",
     "contacts": "Контакты",
     "wellcome__good-afternoon": "Добрый день",
     "wellcome__and-wellcome": "и добро пожаловать",
@@ -13,6 +13,6 @@
     "slide__link0": "Ссылка",
     "end__description": "больше проектов в разработке",
     "About__Me": "Обо мне",
-    "about__text": "Привет! Меня зовут Андрей Евгеньевич. Я начинающий веб-разработчик, из России, Новосибирска. В настоящее время активно изучаю библиотеки Node JS и совершенствую свои навыки по JS. Я постоянно изучаю новые инструменты дизайна и веб-технологии наряду с новыми тенденциями. Вне работы или самообучения я интересуюсь архитектурой, видеоиграми и изучением новых вещей, всего, что вдохновляет.",
+    "about__text": "Привет! Меня зовут Андрей. Я начинающий веб-разработчик, из России, Новосибирска. В настоящее время активно изучаю библиотеки Node JS и совершенствую свои навыки по JS. Я постоянно изучаю новые инструменты дизайна и веб-технологии наряду с новыми тенденциями. Вне работы или самообучения я интересуюсь архитектурой, видеоиграми и изучением новых вещей, всего, что вдохновляет.",
     "work__together": "Давайте работать вместе!"
 }
