--- a/translations/en.json
+++ b/translations/en.json
@@ -9,7 +9,7 @@
     "offer__to-my-portfolio": "to my portfolio",
     "offer__button": "Random move",
     "offer__description": "Here are some of my most recent projects made over the past year",
-    "slide__This-portfolio": "This-portfolio",
+    "slide__This-portfolio": "This portfolio",
     "slide__link0": "link",
     "end__description": "more projects are coming soon",
     "About__Me": "About Me",
