--- a/translations/en.json
+++ b/translations/en.json
@@ -13,6 +13,6 @@
     "slide__link0": "link",
     "end__description": "more projects are coming soon",
     "About__Me": "About Me",
-    "about__text": "Hey! My name is Andrey. I am a junior Web developer, based in Russia, Novosibirsk. I am currently actively studying React JS and Node JS libraries. I am constantly learning new design tools and Web technologies along with new trends. Outside of work or self-study, I am interested in architecture, video games and learning new things, everything that inspires.",
+    "about__text": "Hey! My name is Andrey. I am a junior Web developer, based in Russia, Novosibirsk. I am currently actively studying React JS and Node JS libraries. I am constantly learning new design tools and Web technologies along with new trends. Outside of work or self-study, I am interested in architecture, art and learning new things, everything that inspires.",
     "work__together": "Let’s Work Together"
 }
